--- a/score.html
+++ b/score.html
@@ -6,31 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HCI Prototype</title>
     <link rel="stylesheet" href="assets/reset.css">
-    <style>
-        #top {
-            width: 100%;
-            object-fit: cover;
-            position: sticky;
-            top: 0;
-            left: 0;
-        }
-        #scores {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: start;
-            align-items: center;
-        }
-        #scores img {
-            width: 100%;
-            object-fit: cover;
-        }
-    </style>
-    <script src="scripts/mouse-trail.js" defer></script>
+    <link rel="stylesheet" href="assets/score.css">
+    <script src="scripts/mouse-trail.js" type="text/javascript"></script>
+    <script src="scripts/webgazer.js" type="text/javascript"></script>
     <script>
-        const goToIndex = () => {
-            window.location.assign("index.html");
+        const removeWebgazerVideoContainer = async () => {
+            return new Promise((resolve) => {
+                const interval = setInterval(() => {
+                    const videoFeedback = document.querySelector('#webgazerVideoContainer');
+                    if (videoFeedback) {
+                        videoFeedback.style.display = 'none';
+                        clearInterval(interval);
+                        resolve();
+                    }
+                }, 100);
+            })
         }
+        const initialize = async () => {
+            webgazer.setGazeListener(function(data, elapsedTime) {
+                if (data == null) {
+                    return;
+                }
+                let xprediction = data.x;
+                let yprediction = data.y;
+                updateCursor(xprediction, yprediction)
+            }).begin();
+            await removeWebgazerVideoContainer();
+            populateDots();
+            animate();
+        }
+        const everythingLoaded = setInterval(() => {
+            if (document.readyState === "complete") {
+                clearInterval(everythingLoaded);
+                initialize();
+            }
+        }, 100);
     </script>
 </head>
 <body>
@@ -40,5 +50,10 @@
         <img src="assets/score-2.png" />
         <img src="assets/score-3.png" />
     </div>
+    <script>
+        const goToIndex = () => {
+            window.location.assign("index.html");
+        }
+    </script>
 </body>
 </html>
