--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="view-transition" content="same-origin">
     <title>HCI Prototype</title>
     <link rel="stylesheet" href="assets/reset.css">
-    <style>
-        #screen {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/file.css">
 </head>
 <body>
     <img onclick="goToScore()" id="screen" src="assets/file.png" />
