--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="view-transition" content="same-origin">
     <title>HCI Prototype</title>
-    <link rel="stylesheet" href="assets/reset.css">
-    <link rel="stylesheet" href="assets/file.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/file.css">
 </head>
 <body>
-    <img onclick="goToScore()" id="screen" src="assets/file.png" />
+    <img onclick="goToScore()" id="screen" src="assets/images/file-standalone.png" />
     <script>
         const goToScore = () => {
             window.location.assign("score.html");
