--- a/score.html
+++ b/score.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="view-transition" content="same-origin">
     <title>HCI Prototype</title>
-    <link rel="stylesheet" href="assets/reset.css">
-    <link rel="stylesheet" href="assets/score.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/score.css">
     <script src="scripts/mouse-trail.js" type="text/javascript"></script>
     <!-- <script src="scripts/webgazer.js" type="text/javascript"></script> -->
     <script src="scripts/score.js"></script>
 </head>
 <body>
     <div id="top" class="container">
-        <img onclick="goToIndex()" src="assets/top.png" />
+        <img onclick="goToIndex()" src="assets/images/top-standalone.png" />
         <div class="scroll-trigger"></div>
     </div>
     <div id="scores" class="container">
-        <img src="assets/score-1.png" />
-        <img src="assets/score-2.png" />
-        <img src="assets/score-3.png" />
+        <img src="assets/images/score-1.png" />
+        <img src="assets/images/score-2.png" />
+        <img src="assets/images/score-3.png" />
     </div>
     <div id="bottom" class="container">
         <div class="scroll-trigger"></div>
