--- a/score.html
+++ b/score.html
@@ -11,9 +11,9 @@
     <link rel="apple-touch-icon" href="images/icons/icon-256x256.png" />
     <link rel="apple-touch-icon" href="images/icons/icon-384x384.png" />
     <link rel="apple-touch-icon" href="images/icons/icon-512x512.png" />
-    <meta name="apple-mobile-web-app-status-bar" content="#F9F9F9" />
+    <meta name="apple-mobile-web-app-status-bar" content="#F9F9F9F0" />
     <!-- Android support -->
-    <meta name="theme-color" content="#F9F9F9" />
+    <meta name="theme-color" content="#F9F9F9F0" />
     <title>HCI Prototype</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/score.css">
